actually fixed alignment bug this time

--- a/packages/fluent-controls/src/components/List/GenericManagementList.scss
+++ b/packages/fluent-controls/src/components/List/GenericManagementList.scss
@@ -68,7 +68,8 @@ $header-line-height: 4*$grid;
                 cursor: initial;
             }
 
-            .sort-direction {
+            .sort-direction::before {
+                line-height: 3*$grid;
                 margin-left: 2*$gutter;
             }
         }
